--- a/package.json
+++ b/package.json
@@ -1,4 +1,12 @@
 {
+  "name": "automart",
+  "version": "1.0.0",
+  "description": "Automobile Market place",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server",
+    "server": "nodemon server"
+  },
   "dependencies": {
     "config": "^3.3.7",
     "express": "^4.18.1",
